// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`dashboard golden frames renders many-projects at 80x24 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-overlay            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell] 
 [b] - old-experiment             -         no agent                    [shell] 
                                                                                
▼ empty-project - 0 worktrees                                     [sh] [qs] [▾] 
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:rm session /:search H:help     
"
`;

exports[`dashboard golden frames renders many-projects at 120x40 1`] = `
"station                                                                                                                 
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
▼ station - 5 worktrees                                                                     [shell] [quick session] [▾] 
 [1] ○ cli-help-man                              codex     idle                                    +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup                              -         no agent                                             [shell] 
 [3] ○ pty-buffer                                codex     idle                                           #73 ✓ [shell] 
 [4] + session-resume                            codex     starting                                             [shell] 
 [5] ⠋ station-overlay                           codex     working                               +412 -96 #76 … [shell] 
                                                                                                                        
▼ observer - 3 worktrees                                                                    [shell] [quick session] [▾] 
 [6] x batch-export                              opencode  exited                                          #8 ✓ [shell] 
 [7] ⠋ provider-hooks                            opencode  working                                 +32 -8 #16 … [shell] 
 [8] ○ trace-bundle                              opencode  idle                                      +1 -1 #4 ✓ [shell] 
                                                                                                                        
▼ scripts - 3 worktrees                                                                     [shell] [quick session] [▾] 
 [9] ○ api-cache                                 opencode  idle                                    +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh                          opencode  unknown                                    +3 -1 #10 [shell] 
 [b] - old-experiment                            -         no agent                                             [shell] 
                                                                                                                        
▼ empty-project - 0 worktrees                                                               [shell] [quick session] [▾] 
 0 worktrees                                                                                                            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
N:new A:add R:rename Z:refresh 1-9/a-z:open X:rm session /:search C:fold H:help Q/esc:close                             
"
`;

exports[`dashboard golden frames renders many-projects at 60x16 1`] = `
"station                                                     
─────────────────────────────────────────────────────────── 
                                                            
▼ station - 5 worktrees                       [sh] [qs] [▾] 
 [1] ○ cli-…  codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs…  -         no agent                    [shell] 
 [3] ○ pty-…  codex     idle                  #73 ✓ [shell] 
 [4] + sess…  codex     starting                    [shell] 
 [5] ⠋ stat…  codex     working      +412 -96 #76 … [shell] 
                                                            
▼ observer - 3 worktrees                      [sh] [qs] [▾] 
 [6] x batc…  opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ prov…  opencode  working        +32 -8 #16 … [shell] 
↓ 9 hidden                                                  
─────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:rm sessio… 
"
`;

exports[`dashboard golden frames renders many-projects at 40x12 1`] = `
"station                                 
─────────────────────────────────────── 
                                        
▼ station - 5 worktrees   [sh] [qs] [▾] 
 [1] ○ cli-help…   +14 -6 #70 ✓ [shell] 
 [2] - docs-cle…                [shell] 
 [3] ○ pty-buff…          #73 ✓ [shell] 
 [4] + session-…                [shell] 
 [5] ⠋ station-… +412 -96 #76 … [shell] 
↓ 13 hidden                             
─────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 80x24 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 4 worktrees                                           [sh] [qs] [▾] 
 [1] ! hook-scope             codex     Agent needs appro… +8 -2 #12 x2 [shell] 
 [2] ? metadata-refresh       codex     unknown                   +3 -1 [shell] 
 [3] ! popup-latency          codex     No progress was… +120 -44 #13 … [shell] 
 [4] ⠋ pr-info                codex     working                   #11 ✓ [shell] 
                                                                                
▼ observer - 2 worktrees                                          [sh] [qs] [▾] 
 [5] x done-run               opencode  exited                          [shell] 
 [6] ! sqlite-cleanup         opencode  Agent needs appro… +19 -2 #6 x1 [shell] 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:rm session /:search H:help     
"
`;

exports[`dashboard golden frames renders attention-and-failures at 120x40 1`] = `
"station                                                                                                                 
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
▼ station - 4 worktrees                                                                     [shell] [quick session] [▾] 
 [1] ! hook-scope                                codex     Agent needs approval.                   +8 -2 #12 x2 [shell] 
 [2] ? metadata-refresh                          codex     unknown                                        +3 -1 [shell] 
 [3] ! popup-latency                             codex     No progress was observed recently.    +120 -44 #13 … [shell] 
 [4] ⠋ pr-info                                   codex     working                                        #11 ✓ [shell] 
                                                                                                                        
▼ observer - 2 worktrees                                                                    [shell] [quick session] [▾] 
 [5] x done-run                                  opencode  exited                                               [shell] 
 [6] ! sqlite-cleanup                            opencode  Agent needs approval.                   +19 -2 #6 x1 [shell] 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
N:new A:add R:rename Z:refresh 1-9/a-z:open X:rm session /:search C:fold H:help Q/esc:close                             
"
`;

exports[`dashboard golden frames renders attention-and-failures at 60x16 1`] = `
"station                                                     
─────────────────────────────────────────────────────────── 
                                                            
▼ station - 4 worktrees                       [sh] [qs] [▾] 
 [1] ! hook-scope   Agent needs appro… +8 -2 #12 x2 [shell] 
 [2] ? metadata-r…  unknown                   +3 -1 [shell] 
 [3] ! popup-late…  No progress was… +120 -44 #13 … [shell] 
 [4] ⠋ pr-info      working                   #11 ✓ [shell] 
                                                            
▼ observer - 2 worktrees                      [sh] [qs] [▾] 
 [5] x done-run     exited                          [shell] 
 [6] ! sqlite-cle…  Agent needs appro… +19 -2 #6 x1 [shell] 
                                                            
                                                            
─────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:rm sessio… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 40x12 1`] = `
"station                                 
─────────────────────────────────────── 
                                        
▼ station - 4 worktrees   [sh] [qs] [▾] 
 [1] ! hook-sco…   +8 -2 #12 x2 [shell] 
 [2] ? metadata…          +3 -1 [shell] 
 [3] ! popup-la… +120 -44 #13 … [shell] 
 [4] ⠋ pr-info            #11 ✓ [shell] 
                                        
↓ 3 hidden                              
─────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/… 
"
`;

exports[`dashboard golden frames renders no-projects at 80x24 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
No projects configured yet.                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                                       
"
`;

exports[`dashboard golden frames renders no-projects at 120x40 1`] = `
"station                                                                                                                 
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
No projects configured yet.                                                                                             
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                                                                               
"
`;

exports[`dashboard golden frames renders no-projects at 60x16 1`] = `
"station                                                     
─────────────────────────────────────────────────────────── 
                                                            
No projects configured yet.                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
─────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                   
"
`;

exports[`dashboard golden frames renders no-projects at 40x12 1`] = `
"station                                 
─────────────────────────────────────── 
                                        
No projects configured yet.             
                                        
                                        
                                        
                                        
                                        
                                        
─────────────────────────────────────── 
A:Add Project Q/esc:close               
"
`;
